# deskclocky

./: .configure.scan.swp  Makefile  Makefile.am  Makefile.am~  Makefile.in  clocky  clocky.c  clocky.c~  config.h  config.status  configure  configure.ac  configure.scan  main.c
.deps/: clocky.Po
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
