#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([clocky], [0.1], [ericdwertz@gmail.com])
AC_CONFIG_SRCDIR([clocky.c])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC

AM_INIT_AUTOMAKE()

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
